# scHopfield

./: .gitignore  .readthedocs.yaml  CLAUDE.md  INSTALL.md  LICENSE  MANIFEST.in  PACKAGE_REVIEW.md  README.md  __init__.py  hematopoiesis_analysis.ipynb  hematopoiesis_analysis.py  hematopoiesis_analysis_sch.ipynb  hematopoiesis_script_sch.py  pyproject.toml  requirements.txt  setup.py  test_imports.py
ManuscriptIdeaJesper/: PANEL_SOURCES.md  RED_TEAM.md  scHopfield - Methods Consolidated.md  scHopfield - Methods Final_NK_JT_JP_JP.docx  scHopfield-INTRODUCTION_v4 (2).docx  scHopfield_Abstract_v5 (2).docx  scHopfield_Manuscript_assembled.md  scHopfield_Results_v14 (3).docx
analyses/: _co_shim.py  bias_penalty_experiment.py  bias_penalty_figures.py  bias_reprogramming_figures.py  bias_reprogramming_staged.py  bias_reprogramming_validation.py  bias_takeover_fix_demo.py  celloracle_ko_panel.py  circuit_recovery.py  cross_dataset_figures.py  energy_stability.py  grn_baseline_genie3.py  hemato_ko_axis.py  hemato_ko_panel.py  hemato_pipeline.py  hill_vs_linear.py  identifiability_multi.py  jacobian_reg_validation.py  nc_ko_panel.py  network_reg_sensitivity.py  no_scaffold_compare.py  pancreas_landscape.py  paper_section_figures.py  plot_circuit_recovery.py  plot_network_reg_sensitivity.py  plot_seed_sensitivity.py  plot_sensitivity_clustered.py  plot_sensitivity_explore.py  plot_sensitivity_explore2.py  prep_dataset.py  prep_pancreas.py  real_data_identifiability.py  run_full_pipeline.py  seed_sensitivity.py
analyses/figure_packs/: _common.py  pack1_small_circuits.py  pack2_networks.py  pack3_perturbation.py  pack4_double_ko.py  pack5_energy_stability.py  pack6_overview_crossdataset.py  pack_ablations.py
analyses/reports/: PLOTTING_REVIEW.md  bimodal_ablation.py  build_report.py  compare_velocity_pseudotime.py  config.py  dyn_streamline.py  dyn_velocity.py  rutils.py  sections.py  velocity_source_compare.py
analysis/: __init__.py  energy_calculator.py  jacobian_analyzer.py  landscape_analyzer.py  network_analyzer.py
archive/Comments/: message.txt  scHopfield_comments_v1.docx  scHopfield_comments_v1.txt
benchmark_results/: FINDINGS.md  INDEX.md  PAPER_FIGURE_GUIDE.md  audit_table.csv
benchmark_results/ablations/: hill_vs_linear.json
benchmark_results/bias_penalty/: BIAS_FIGURE_GUIDE.md  recovery.json  reprogramming_staged.json  reprogramming_staged_arrays.npz  reprogramming_validation.json
benchmark_results/circuit_recovery/: runs.json  summary.csv  summary.json
benchmark_results/cross_dataset/: CROSS_DATASET_FIGURE_GUIDE.md  cross_dataset_summary.csv
benchmark_results/energy_stability/: murine_NC.json
benchmark_results/figures/: fig1_overview_spec.json
benchmark_results/grn_baseline/: genie3_vs_schopfield.json
benchmark_results/hemato_ko/: celloracle_ko_panel.json  schopfield_ko_panel.json
benchmark_results/jacobian_reg/: validation.json
benchmark_results/nc_ko/: panel.json
benchmark_results/network_reg_sensitivity/: FIGURE_GUIDE.md  jaccard_top_pert.json  jaccard_top_score_ery.json  jaccard_top_score_mye.json  no_scaffold_compare.json  results.json
benchmark_results/pipeline/: README.md  pipeline_summary.json
benchmark_results/real_identifiability/: multi.json  results.json
benchmark_results/seed_sensitivity/: results.json
benchmark_results/seed_sensitivity_real/: results.json
core/: __init__.py  base_models.py  data_processing.py
docs/: Makefile  README.md  changelog.rst  conf.py  contributing.rst  data_conventions.rst  dynamics.rst  energy_analysis.rst  examples.rst  faq.rst  index.rst  inference.rst  installation.rst  network_analysis.rst  pipeline.rst  preprocessing.rst  quickstart.rst  requirements.txt  stability_analysis.rst  tutorial.rst  visualization.rst
docs/_templates/: sidebar-main-nav.html
docs/api/: dynamics.rst  index.rst  inference.rst  plotting.rst  preprocessing.rst  tools.rst  workflows.rst
docs/methods/: scHopfield - Methods Final.md  scHopfield - Results Draft.md
docs/notebooks/: 01_getting_started.rst  02_energy_analysis.rst  03_network_analysis.rst  04_stability_analysis.rst  05_perturbation_analysis.ipynb  05_perturbation_analysis.rst  index.rst
examples/: scHopfield-analysis-pipeline-organized.ipynb  scHopfield-analysis-pipeline.ipynb
latex/: .gitignore  compose_figures.py  generate_tex.py  main.tex
notebooks/: 01_getting_started.ipynb  02_energy_analysis.ipynb  03_network_analysis.ipynb  04_stability_analysis.ipynb  05_perturbation_analysis.ipynb  07_perturbation_extended_analyses.ipynb
notebooks/core/: 01_getting_started.ipynb  02_energy_analysis.ipynb  03_network_analysis.ipynb  04_stability_analysis.ipynb  06_lineage_drivers.ipynb  07_perturbation_extended_analyses.ipynb  08_end_to_end_pipeline.ipynb  Paper_Figures.ipynb
notebooks/experiments/: SCH_enhanced_recipe_analysis.ipynb  bifurcation.jl  params.json  plot_bifurcation.jl  plot_bifurcation_3d.jl
optimization/: __init__.py  energy_optimizer.py  scaffold_optimizer.py
paper/: compose_figures.py  generate_tex.py  main.tex
scHopfield/: __init__.py  workflows.py
scHopfield/_utils/: docs.py  io.py  math.py  seed.py
scHopfield/dynamics/: __init__.py  _utils.py  perturbation.py  simulation.py  solver.py
scHopfield/inference/: __init__.py  datasets.py  interactions.py  optimizer.py  scaffold.py
scHopfield/plotting/: __init__.py  correlation.py  dynamics.py  energy.py  flow.py  genes.py  jacobian.py  networks.py  perturbation.py
scHopfield/preprocessing/: __init__.py  sigmoid_fitting.py  velocity.py
scripts/: run_pydstool.py
simulation/: __init__.py  dynamics_simulator.py  ode_solver.py
tests/: conftest.py  test_analysis.py  test_correlation.py  test_embedding.py  test_fitting.py  test_landscape.py  test_math_derivative.py  test_optimizer.py  test_preprocessing.py  test_pydstool.py  test_pydstool_docker.py  test_utils_data.py  test_utils_math.py  test_visualization.py
utils/: __init__.py  analysis_utilities.py  utilities.py
visualization/: __init__.py  energy_plots.py  landscape_plots.py  trajectory_plots.py
(+37 files in other folders)
