[project]
name = "scHopfield"
version = "0.1.0"
description = "Single-cell Hopfield model for gene regulatory network analysis"
authors = [{name = "Juan Pablo Bernal"}]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "torch>=1.10",
    "anndata>=0.8",
    "pandas>=1.3",
    "tqdm>=4.60",
    "umap-learn>=0.5"
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"