[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "scHopfield"
version = "0.1.0"
description = "Single-cell Hopfield network analysis for gene regulatory networks"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "scHopfield Contributors"}
]
keywords = [
    "single-cell",
    "bioinformatics",
    "hopfield-network",
    "gene-regulatory-networks",
    "RNA-seq",
    "energy-landscape"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "anndata>=0.8.0",
    "scanpy>=1.9.0",
    "torch>=1.9.0",
    "networkx>=2.6.0",
    "umap-learn>=0.5.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.62.0",
    "h5py>=3.0.0",
    "hoggorm>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5",
    "nbsphinx>=0.8",
    "ipykernel>=6.0",
]
optional = [
    "seaborn>=0.11.0",
    "python-igraph>=0.9.0",
    "dynamo-release>=1.0.0",
]
all = [
    "seaborn>=0.11.0",
    "python-igraph>=0.9.0",
    "dynamo-release>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Bernaljp/scHopfield"
Documentation = "https://schopfield.readthedocs.io"
Repository = "https://github.com/Bernaljp/scHopfield"
"Bug Tracker" = "https://github.com/Bernaljp/scHopfield/issues"

[tool.setuptools]
packages = ["scHopfield", "scHopfield._utils", "scHopfield.preprocessing",
            "scHopfield.inference", "scHopfield.tools", "scHopfield.plotting",
            "scHopfield.dynamics"]

[tool.setuptools.package-data]
scHopfield = ["*.py"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=scHopfield --cov-report=html --cov-report=term-missing"
